unpackaged/main/default/objects/ACG_Call_Adjustment_Line_Item__c/ACG_Call_Adjustment_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Call Adjustment Line Item</label>
    <nameField>
        <displayFormat>CALI-{000000}</displayFormat>
        <label>Call Adjustment Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Adjustment Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>