unpackaged/main/default/objects/ACG_Call_Adjustment_Line_Item__c/fields/ACG_Approval__c.field-meta.xml
<CustomField>
    <fullName>ACG_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approval</label>
    <type>Checkbox</type>
</CustomField>