unpackaged/main/default/objects/ACG_Call_Adjustment_Line_Item__c/fields/ACG_Case__c.field-meta.xml
<CustomField>
    <fullName>ACG_Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Call Adjustment Line Items</relationshipLabel>
    <relationshipName>Call_Adjustment_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>