unpackaged/main/default/objects/ACG_Call_Adjustment_Line_Item__c/fields/ACG_Cost__c.field-meta.xml
<CustomField>
    <fullName>ACG_Cost__c</fullName>
    <label>Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>