unpackaged/main/default/objects/ACG_Call_Adjustment_Line_Item__c/fields/ACG_Product__c.field-meta.xml
<CustomField>
    <fullName>ACG_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Call Adjustment Line Items</relationshipLabel>
    <relationshipName>Call_Adjustment_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>