unpackaged/main/default/objects/ACG_Call_Adjustment_Line_Item__c/fields/ACG_Quantity__c.field-meta.xml
<CustomField>
    <fullName>ACG_Quantity__c</fullName>
    <label>Quantity</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>