unpackaged/main/default/objects/ACG_Call_Adjustment_Line_Item__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>CO</fullName>
            </value>
            <value>
                <fullName>CMC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>